Fixed Tree Split Evaluator